fix responsive css for industry insights slider on mobile

--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -113,13 +113,13 @@
   }
 
   .insights-scrollable-container {
-    @apply flex items-center whitespace-nowrap overflow-x-auto
+    @apply items-center whitespace-nowrap overflow-x-auto sm:flex hidden overflow-y-hidden
   }
 
   .insights-scrollable-container > div {
     width: 175px;
     margin-right: 10px;
-    @apply flex-none
+    @apply flex-none relative
   }
 
   .grid-limited {
